--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
     <script src="assets/js/layout.js" type="module"></script>
   </head>
 
-  <body data-page="kontakt">
+  <body data-page="contacto">
     <div id="appHeader"></div>
 
     <main class="page">
