--- a/espanel.html
+++ b/espanel.html
@@ -96,8 +96,6 @@
                   >Continuar</a
                 >
               </div>
-
-              <div class="hr"></div>
             </div>
             <div class="card" id="progressSummaryCard">
               <div class="sectionTitle" style="margin-top: 0">Progreso</div>
@@ -132,35 +130,15 @@
               <div class="metaRow" style="margin-top: 12px; gap: 10px">
                 <a class="btn-yellow" href="review.html">Empezar 10 min</a>
                 <a class="btn-white-outline" href="flashcards.html">Fichas</a>
+                <a
+                  class="btn-white-outline"
+                  href="ajustes.html#repaso"
+                  aria-label="Ajustes de repaso"
+                  title="Ajustes de repaso"
+                  >⚙️</a>
                 <span class="hintSmall" id="reviewHint"></span>
               </div>
-              <div class="hr"></div>
-              <div class="sectionTitle" style="margin-top: 0">Ajustes</div>
-              <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
-                <label class="hintSmall" style="font-weight: 900">Plan diario</label>
-                <select id="reviewMinutes" class="select" style="min-width: 160px">
-                  <option value="5">5 min</option>
-                  <option value="10">10 min</option>
-                  <option value="15">15 min</option>
-                </select>
-                <label class="hintSmall" style="font-weight: 900">Tarjetas/día</label>
-                <select id="reviewLimit" class="select" style="min-width: 160px">
-                  <option value="10">10</option>
-                  <option value="20">20</option>
-                  <option value="30">30</option>
-                </select>
-                <label class="hintSmall" style="font-weight: 900">Dirección</label>
-                <select id="reviewDirection" class="select" style="min-width: 200px">
-                  <option value="pl_es">PL → ES</option>
-                  <option value="es_pl">ES → PL</option>
-                  <option value="mixed">Mixto</option>
-                </select>
-                <button class="btn-white-outline" id="reviewSave" type="button">
-                  Guardar
-                </button>
-                <span class="hintSmall" id="reviewSaveStatus"></span>
-              </div>
-          </div>
+           </div>
             <div id="notificaciones"></div>
             <div class="card" id="inboxCard">
               <div class="sectionTitle" style="margin-top: 0">Bandeja</div>
